--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div id="text"> welcome to the world of Web development</div>
+<div id="text"> Welcome to the world of Web development</div>
 	
 
 
